# WebView2-Desktop-Vue

./: Application.rc  CMakeLists.txt  README.md
CMake/: WebView2.cmake
Resources/UI/: index.html  jsconfig.json  package.json  vite.config.js
Resources/UI/source/: App.vue  engine.js  main.js
Source/: Main.cpp
Source/UI/: Application.cpp  Application.h  Structs.h  Utils.cpp  Utils.h
